<resources>
    <string name="app_name">DoAnLTMB</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? Create Account</string>
    <string name="sign_up_to_start_shopping_for_the_latest_electronics">Sign up to start shopping for the latest electronics</string>
    <string name="join_us">Join Us</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="c_a_h_ng_i_n_t">Cửa hàng điện tử</string>
    <string name="timkiemsanpham">Tìm kiếm sản phẩm...</string>
    <string name="sanphammoinhat">Sản phẩm mới nhất</string>
    <string name="congnghedinhcao">Khám phá công nghệ đỉnh cao</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="xin_chao_admin">Xin chào, Admin</string>
    <string name="string1">Đang quản lý sản phẩm và đơn hàng của cửa hàng.</string>
</resources>